<resources>
    <string name="app_name">NoteApp</string>
    <string name="notes_app">Notes App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="red_dot">Red Dot</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="green_dot">Green Dot</string>
    <string name="yellow_dot">Yellow Dot</string>
    <string name="notes">Notes</string>
    <string name="save_notes">Save Notes</string>
    <string name="you_sure_want_delete">You sure want delete ?</string>
    <string name="text_test">123asdasd asdkhqwie qw jkahsd jkasd askdjashdasdjk ahs d asd jkhasdk jasdk ja sdkjahsdkjhznxmcbzmnxcb zxc zxcmnb</string>
    <string name="text_date">1 March 2023</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>