<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.CreateNotesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="@dimen/_16sdp"
            android:paddingTop="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/regular"
                    android:inputType="text"
                    android:lines="1"
                    android:padding="@dimen/_15sdp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:hint="@string/subtitle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtSubtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/regular"
                    android:inputType="text"
                    android:lines="1"
                    android:padding="@dimen/_15sdp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btnRed"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:background="@drawable/red_dot"
                    android:contentDescription="@string/red_dot" />

                <ImageView
                    android:id="@+id/btnGreen"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:background="@drawable/green_dot"
                    android:contentDescription="@string/green_dot" />

                <ImageView
                    android:id="@+id/btnYellow"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:background="@drawable/yellow_dot"
                    android:contentDescription="@string/yellow_dot" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:hint="@string/notes">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtNotes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/regular"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:lines="10"
                    android:overScrollMode="always"
                    android:padding="@dimen/_15sdp"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:scrollHorizontally="false" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnSaveNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_26sdp"
            android:contentDescription="@string/save_notes"
            android:src="@drawable/ic_done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>