<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_5sdp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_10sdp"
        android:background="@color/teal_200" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/you_sure_want_delete"
        android:textSize="@dimen/_18ssp" />

    <androidx.appcompat.widget.AppCompatTextView
       android:id="@+id/dialogYes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/btn_yes"
        android:fontFamily="@font/bold"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/yes"
        android:textColor="#4E342E" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dialogNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_10sdp"
        android:background="@drawable/btn_no"
        android:layout_marginEnd="@dimen/_20sdp"
        android:gravity="center"
        android:text="@string/no"
        android:layout_marginBottom="@dimen/_20sdp"
        />

</LinearLayout>