<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_10sdp"
            android:layout_margin="@dimen/_10sdp"
            app:cardBackgroundColor="@color/teal_200"
            >
            <View
                android:id="@+id/viewPriority"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:background="@drawable/red_dot"
                android:layout_gravity="end"
                android:layout_margin="@dimen/_10sdp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvItemNotesTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bold"
                    android:text="@string/app_name"
                    android:textSize="@dimen/_18ssp"
                    android:textColor="@color/black"
                    android:maxLines="1"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvItemSubtitleNotes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/regular"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/text_test"
                    android:textSize="@dimen/_14ssp"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvItemNotesDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bold"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/text_date"
                    android:textSize="@dimen/_16ssp"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>